tests/typechecker/fail/025-array-segfault.hyg
let n = 6;
let arr: array {int} = array(n, 40 + 2);
arr.length <- 3
